# dwlab-backup

./: .gitignore  pyproject.toml  requirements.txt  setup.py
DEBIAN/: control
debian/: changelog  control
dwlabbackup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etc/profile.d/: dwlab-backupclient.sh
etc/sudoers.d/: dwlab-backup-user
opt/dwlab/dwlab-backupclient/commands/: dwlabbackup-omdbackup_local.py  dwlabbackup-omdbackup_remote.py  dwlabbackup-tar.py
opt/dwlab/dwlab-backupclient/etc/: dwlabBackupClientConfig.yaml  logging.yaml
opt/dwlab/dwlab-backupclient/setup/etc/: dwlabBackupClientSettings.template.yaml  dwlabBackupClientSettings.yaml
src/dwlab-backup/: dwlab_backupClient.py
src/dwlab_backup/: __init__.py  dwlab_backupClient.py
src/dwlab_backup.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dwlabbackup/: __init__.py  dwlab_backup.py
