[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwlab_backup"
version = "0.6.44"
description = "DW-Lab Backup"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Detlef Wolf", email = "detlef.wolf@dw-lab.de" },
]
requires-python = ">=3.8"

dependencies = [
    "requests >=2.0",  # Example dependency
]

[project.urls]
Homepage = "https://github.com/dtlfwolf/dwlab-backup"

[tool.setuptools.packages.find]
where = ["src"]
