[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwlabbackup"
version = "0.7.0"
description = "DW-Lab Backup"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Detlef Wolf", email = "detlef.wolf@dw-lab.de" },
]
requires-python = ">=3.8"

dependencies = [
    "requests >=2.0"
]

[project.urls]
Homepage = "https://github.com/dtlfwolf/dwlab-backup"

[tool.setuptools.packages.find]
where = ["."]